--- a/api/authorization.yml
+++ b/api/authorization.yml
@@ -100,6 +100,14 @@ components:
           minimum: 0
           description: Maximal number of entries per page
 
+    VersionConfig:
+      type: object
+      required:
+        - version
+      properties:
+        version:
+          type: string
+
     Error:
       type: object
       required:
@@ -1080,3 +1088,17 @@ paths:
       responses:
         204:
           description: NoContent
+
+  /config/version:
+    get:
+      tags:
+        - config
+      operationId: getVersion
+      description: get server version
+      responses:
+        200:
+          description: server version information
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/VersionConfig"
