--- a/api/authorization.yml
+++ b/api/authorization.yml
@@ -24,6 +24,7 @@ components:
       in: query
       name: prefix
       description: return items prefixed with this value
+      allowEmptyValue: true
       schema:
         type: string
 
@@ -31,6 +32,7 @@ components:
       in: query
       name: after
       description: return items after this value
+      allowEmptyValue: true
       schema:
         type: string
 
@@ -353,11 +355,13 @@ paths:
         - $ref: "#/components/parameters/PaginationAmount"
         - in: query
           name: id
+          allowEmptyValue: true
           schema:
             type: integer
             format: int64
         - in: query
           name: email
+          allowEmptyValue: true
           schema:
             type: string
         - in: query
