--- a/.github/workflows/close-stale-issues.yaml
+++ b/.github/workflows/close-stale-issues.yaml
@@ -12,8 +12,8 @@ jobs:
         - name: Close stale issues and PRs
           uses: actions/stale@v8
           with:
-          stale-issue-message: 'This issue is stale because it has been open for 30 days with no activity.'
-          stale-pr-message: 'This pull request is stale because it has been open for 30 days with no activity.'
+          stale-issue-message: 'Marking this issue as stale after 30 days of inactivity, please comment or this will be closed.'
+          stale-pr-message: 'Marking this pull request as stale after 30 days of inactivity, please comment or this will be closed.'
           close-issue-message: 'This issue was closed because it has been stale for 7 days with no activity.'
           close-pr-message: 'This pull request was closed because it has been stale for 7 days with no activity.'
           days-before-stale: 30
