--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -76,7 +76,28 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
+      - name: lakectl docker metadata
+        id: lakectl_meta
+        uses: docker/metadata-action@v5
+        with:
+          images: |
+            treeverse/lakectl
+            ${{ steps.login-ecr.outputs.registry }}/lakectl
+          tags: |
+            type=semver,pattern={{version}},value=${{ steps.version.outputs.tag }}
+            type=semver,pattern={{major}}.{{minor}},value=${{ steps.version.outputs.tag }}
+            type=semver,pattern={{major}},value=${{ steps.version.outputs.tag }}
+      - name: lakefs docker metadata
+        id: lakefs_meta
+        uses: docker/metadata-action@v5
+        with:
+          images: |
+            treeverse/lakefs
+            ${{ steps.login-ecr.outputs.registry }}/lakefs
+          tags: |
+            type=semver,pattern={{version}},value=${{ steps.version.outputs.tag }}
+            type=semver,pattern={{major}}.{{minor}},value=${{ steps.version.outputs.tag }}
+            type=semver,pattern={{major}},value=${{ steps.version.outputs.tag }}
       - name: Build and push lakectl
         uses: docker/build-push-action@v3
         with:
@@ -85,10 +106,7 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64,darwin/amd64,darwin/arm64
           build-args: VERSION=${{ steps.version.outputs.tag }}
-          tags: |
-            ${{ steps.login-ecr.outputs.registry }}/lakectl:${{ steps.version.outputs.tag }}
-            treeverse/lakectl:${{ steps.version.outputs.tag }}
-            treeverse/lakectl:latest
+          tags: ${{ steps.lakectl_meta.outputs.tags }}
 
       - name: Build and push lakefs
         uses: docker/build-push-action@v3
@@ -98,7 +116,4 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64,darwin/amd64,darwin/arm64
           build-args: VERSION=${{ steps.version.outputs.tag }}
-          tags: |
-            ${{ steps.login-ecr.outputs.registry }}/lakefs:${{ steps.version.outputs.tag }}
-            treeverse/lakefs:${{ steps.version.outputs.tag }}
-            treeverse/lakefs:latest
+          tags: ${{ steps.lakefs_meta.outputs.tags }}
