update username description

--- a/api/authorization.yml
+++ b/api/authorization.yml
@@ -129,7 +129,7 @@ components:
       properties:
         username:
           type: string
-          description: a unique identifier for the user. In password-based authentication, this is the email.
+          description: a unique identifier for the user
         creation_date:
           type: integer
           format: int64
