--- a/.github/workflows/close-stale-issues.yaml
+++ b/.github/workflows/close-stale-issues.yaml
@@ -12,11 +12,16 @@ jobs:
     - name: Close stale issues and PRs
       uses: actions/stale@v8
       with:
-        stale-pr-message: 'Marking this pull request as stale after 30 days of inactivity, please comment or this will be closed.'
-        close-pr-message: 'This pull request was closed because it has been stale for 7 days with no activity.'
-        days-before-stale: -1
-        days-before-close: -1
+        stale-pr-message: 'This PR is now marked as stale after 30 days of inactivity, and will be closed soon. To keep it, mark it with the "no stale" label.'
+        close-pr-message: 'Closing this PR because it has been stale for 7 days with no activity.'
+        stale-issue-message: 'This issue is now marked as stale after 90 days of inactivity, and will be closed soon. To keep it, mark it with the "no stale" label.'
+        close-issue-message: 'Closing this issue because it has been stale for 7 days with no activity.'
+        days-before-issue-stale: 90
         days-before-pr-stale: 30
-        days-before-pr-close: 7
+        days-before-close: 7
         stale-pr-label: stale
+        stale-issue-label: stale
+        exempt-pr-labels: 'no stale'
+        exempt-issue-labels: 'no stale'
         repo-token: ${{ secrets.GITHUB_TOKEN }}
+        operations-per-run: 300
