--- a/.github/workflows/docs-latest.yaml
+++ b/.github/workflows/docs-latest.yaml
@@ -26,7 +26,7 @@ jobs:
       - name: Build latest
         id: build-latest
         working-directory: docs
-        run: bundle exec jekyll build --config _config.yml -d _site/ -b https://docs.lakefs.io
+        run: bundle exec jekyll build --config _config.yml -d _site/
 
       - name: Publish to docs repository
         uses: dmnemec/copy_file_to_another_repo_action@v1.1.1
