--- a/.github/workflows/docs-pr.yaml
+++ b/.github/workflows/docs-pr.yaml
@@ -27,7 +27,7 @@ jobs:
       - name: Build latest
         id: build-latest
         working-directory: docs
-        run: bundle exec jekyll build --config _config.yml -d _site/ -b https://docs.lakefs.io
+        run: bundle exec jekyll build --config _config.yml -d _site/ --verbose
 
       - name: Overlay PR message on each page
         working-directory: docs/_site
