--- a/.github/workflows/docs-release.yaml
+++ b/.github/workflows/docs-release.yaml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Build release
         working-directory: docs
-        run: bundle exec jekyll build --config _config.yml -d _site/${{ steps.version.outputs.tag }} -b https://docs.lakefs.io/${{ steps.version.outputs.tag }}
+        run: bundle exec jekyll build --config _config.yml -d _site/${{ steps.version.outputs.tag }} -b /${{ steps.version.outputs.tag }}
 
       - name: Update published version
         env:
