--- a/.github/workflows/docs-release.yaml
+++ b/.github/workflows/docs-release.yaml
@@ -39,7 +39,7 @@ jobs:
 
       - name: Update robots.txt
         working-directory: docs/_site
-        run: "sed -i 's/^Sitemap: /Sitemap: https:\/\/docs.lakefs.io/' robots.txt"
+        run: "sed -i 's/^Sitemap: /Sitemap: https:\/\/docs.lakefs.io' robots.txt"
 
       - name: Update published version
         env:
