--- a/.github/workflows/docs-pr.yaml
+++ b/.github/workflows/docs-pr.yaml
@@ -32,7 +32,8 @@ jobs:
 
       - name: Update robots.txt
         working-directory: docs/_site
-        run: "sed -i 's/^Sitemap: /Sitemap: https:\/\/docs.lakefs.io' robots.txt"
+        run: |
+          sed -i 's/^Sitemap: /Sitemap: https:\/\/docs.lakefs.io' robots.txt
 
       - name: Overlay PR message on each page
         working-directory: docs/_site
