--- a/.github/workflows/docs-release.yaml
+++ b/.github/workflows/docs-release.yaml
@@ -40,7 +40,7 @@ jobs:
       - name: Update robots.txt
         working-directory: docs/_site
         run: |
-          sed -i 's/^Sitemap: /Sitemap: https:\/\/docs.lakefs.io' robots.txt
+          sed -i 's/^Sitemap: /Sitemap: https:\/\/docs.lakefs.io/' robots.txt
 
       - name: Update published version
         env:
